@@ -1,3 +1,14 @@
+2011-11-28  Rafael Weinstein  <rafaelw@chromium.org>
+
+        [MutationObservers] Fix build breakage after CSSInlineDeclaration refactor
+        https://bugs.webkit.org/show_bug.cgi?id=73243
+
+        Reviewed by Ryosuke Niwa.
+
+        No tests needed. This patch only contains compile fixes.
+
+        * css/CSSMutableStyleDeclaration.cpp:
+
 2011-11-28  Jon Lee  <jonlee@apple.com>
 
         Fix Chromium bot build error related to b73253.
